<resources>
    <string name="app_name">OrderAppServer</string>
    <string name="todo1">Todo1</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="phone">Phone Number</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="title_activity_tracking_order">Map</string>
</resources>