<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@drawable/background_food">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editPhone"
            android:hint="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true">
        </com.rengwuxian.materialedittext.MaterialEditText>
    </LinearLayout>
    <Button
        android:id="@+id/btnSignIn"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom = "true"
        android:background="@color/colorPrimary"
        android:shadowColor="#212121"
        android:shadowDx="5"
        android:shadowRadius="4"
        android:layout_margin="8dp"/>

</RelativeLayout>